Theme: Fix archives page on Safari
Before this the first bullet point would be offset way off to the right

--- a/discord_to_blog/theme/static/css/main.css
+++ b/discord_to_blog/theme/static/css/main.css
@@ -154,6 +154,7 @@ thead {
 .post.archives {
     margin-bottom: 1.5em;
     margin-left: 160px;
+    clear: both;
 }
 .post p {
     text-align: justify;
